# python-basic

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/config/: settings.py
src/config/logger/: logging_config.py  logs_config.json
src/tests/: test.py
