[tool.poetry]
name = "python-basic"
version = "0.1.0"
description = ""
authors = ["Ewen"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]  # Indique où est le code

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"